# cs-tech-tool

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/resources/files/: exceptions_folder.docx  exceptions_folder.txt
src-tauri/resources/scripts/: clean_installation.ps1
src-tauri/src/: main.rs  open_tool.rs  utilities.rs
src-tauri/src/activation/: mod.rs  reset_activation.rs
src-tauri/src/csi8/: clean_installation.rs  csdmlite.rs  firewall.rs  full_permission_db.rs  mod.rs  nbus_data.rs
src-tauri/src/scripts/: reset_csdmlite.ps1
src-tauri/src/scripts/cssecuritytool/: readme.txt
src-tauri/src/scripts/cssecuritytool/firewall/: CS8100.ps1  CS8200.ps1  CS9600.ps1  CSI.ps1  CSI8v3.ps1
src-tauri/src/scripts/cssecuritytool/paths/: CSIPaths.txt
src-tauri/src/scripts/cssecuritytool/process/: CS8100.txt  CS81003D.txt  CS8100SC.txt  CS8100SC3D.txt  CS8200v1.txt  CS8200v2.txt  CS9600.txt  CSImaging7.txt  CSImaging8_v2.txt  CSImaging8_v3.txt
src-tauri/src/scripts/cssecuritytool/scripts/: Script_WindowsDefender_ExclusionPaths.ps1  Script_WindowsDefender_ExclusionProcessesCS8100.ps1  (+9 more)
src-tauri/src/utility/: activation.rs  computer_ip.rs  cssecurity.rs  dis_license.rs  firewall.rs  mod.rs  systeminfo.rs  visual_cpp.rs
src-tauri/src/utility/data/: mod.rs  proc_8100.rs  proc_81003d.rs  proc_8100sc.rs  proc_8100sc3d.rs  proc_8200.rs  proc_8200neo.rs  proc_9600.rs  proc_csi7.rs  proc_csi8.rs  proc_csi8server.rs
src-tauri/src/windows/: disable_startup.rs  mod.rs
(+77 files in other folders)
