[package]
name = "cs-tech-tool"
version = "1.0.0"
description = "CS Technician Tool"
authors = ["Mattia Italiano"]
default-run = "cs-tech-tool"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "shell-all", "dialog-open", "notification-all", "notification"] }
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[package.metadata.tauri]
embedded-server = { active = true }
manifest-path = "./app.manifest"
